--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <form id="bookForm" style="display: none;">
 
         <label for="title">Title:</label>
-        <input type="text" id="title">
+        <input type="text" id="title" required>
         
         <label for="author">Author:</label>
-        <input type="text" id="author">
+        <input type="text" id="author" required>
 
         <label for="pages">Pages:</label>
         <input type="text" id="pages">
 
+        <label for="readStatus">Read:</label>
         <input type="checkbox" id="readStatus">
 
         <input type="submit" value="Add Book to Library" id="addBookForm">
 
-
-
     </form>
+    <div class="libraryDisplay"></div>
 </body>
 </html>
